Update and rename py to py.html

--- a/py.html
+++ b/py.html
@@ -1,1 +1,3 @@
+<html>
 <a href="http://blog.nacyot.com/articles/2015-05-08-jupyter-multiple-pythons/">http://blog.nacyot.com/articles/2015-05-08-jupyter-multiple-pythons/</a>
+</html>
